# django-base-setup

./: docker-compose.yaml  pyproject.toml  requirements.txt
src/: manage.py
src/api/: settings.py  urls.py
src/company_hero/: asgi.py  settings.py  wsgi.py
