[tool.poetry]
name = "project-python"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
pre-commit = "^3.7.1"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
run = { cmd = "docker-compose build --no-cache && docker-compose up", help = "create and run project" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
